Add button scss module, refactor styling, start adding default styling from designs

--- a/opentreemap/treemap/static/css/sass/partials/_footer.scss
+++ b/opentreemap/treemap/static/css/sass/partials/_footer.scss
@@ -1,12 +1,16 @@
 // Partial: Footer
 
 footer {
+    border-top: 1px solid $well-color;
     position: relative;
     background: #FFF;
     width: 100%;
     font-size: 12px;
-    height: 20px;
-    padding: 10px 15px;
+
+    .footer-inner {
+        padding: 9px 15px 10px;
+        height: 20px;
+    }
 
     a {
         color: $subtext-color;
