--- a/opentreemap/treemap/static/css/main.css
+++ b/opentreemap/treemap/static/css/main.css
@@ -28,6 +28,9 @@ textarea,
 .uneditable-input {
   font-size: 0.75em; }
 
+.btn-group {
+  font-size: 14px; }
+
 html,
 body {
   height: 100%; }
@@ -37,6 +40,180 @@ body {
   height: auto !important;
   height: 100%;
   margin-bottom: -40px; }
+  .wrapper .btn {
+    background: #f1f2f2;
+    border: 1px solid #c9cdcd;
+    color: #231f20;
+    text-decoration: none;
+    font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 0.875em;
+    font-weight: 400; }
+    .wrapper .btn:hover, .wrapper .btn:focus {
+      box-shadow: 0 3px 6px #c9cdcd;
+      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+      background: #e4e6e6; }
+    .wrapper .btn.btn-large {
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 1.125em;
+      font-weight: 400; }
+    .wrapper .btn.btn-small {
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.75em;
+      font-weight: 400; }
+    .wrapper .btn.btn-mini {
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.625em;
+      font-weight: 400; }
+    .wrapper .btn.btn-primary {
+      background: #8baa3d;
+      border: 1px solid #5d7229;
+      color: white;
+      text-decoration: none;
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: 400; }
+      .wrapper .btn.btn-primary:hover, .wrapper .btn.btn-primary:focus {
+        box-shadow: 0 3px 6px #5d7229;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+        background: #7c9736; }
+      .wrapper .btn.btn-primary.btn-large {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 1.125em;
+        font-weight: 400; }
+      .wrapper .btn.btn-primary.btn-small {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.75em;
+        font-weight: 400; }
+      .wrapper .btn.btn-primary.btn-mini {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.625em;
+        font-weight: 400; }
+    .wrapper .btn.btn-info {
+      background: #56abb2;
+      border: 1px solid #3b7b81;
+      color: white;
+      text-decoration: none;
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: 400; }
+      .wrapper .btn.btn-info:hover, .wrapper .btn.btn-info:focus {
+        box-shadow: 0 3px 6px #3b7b81;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+        background: #4b9da4; }
+      .wrapper .btn.btn-info.btn-large {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 1.125em;
+        font-weight: 400; }
+      .wrapper .btn.btn-info.btn-small {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.75em;
+        font-weight: 400; }
+      .wrapper .btn.btn-info.btn-mini {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.625em;
+        font-weight: 400; }
+    .wrapper .btn.btn-success {
+      background: #add142;
+      border: 1px solid #81a027;
+      color: white;
+      text-decoration: none;
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: 400; }
+      .wrapper .btn.btn-success:hover, .wrapper .btn.btn-success:focus {
+        box-shadow: 0 3px 6px #81a027;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+        background: #a2c931; }
+      .wrapper .btn.btn-success.btn-large {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 1.125em;
+        font-weight: 400; }
+      .wrapper .btn.btn-success.btn-small {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.75em;
+        font-weight: 400; }
+      .wrapper .btn.btn-success.btn-mini {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.625em;
+        font-weight: 400; }
+    .wrapper .btn.btn-warning {
+      background: #ffdd17;
+      border: 1px solid #caac00;
+      color: white;
+      text-decoration: none;
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: 400; }
+      .wrapper .btn.btn-warning:hover, .wrapper .btn.btn-warning:focus {
+        box-shadow: 0 3px 6px #caac00;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+        background: #fcd700; }
+      .wrapper .btn.btn-warning.btn-large {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 1.125em;
+        font-weight: 400; }
+      .wrapper .btn.btn-warning.btn-small {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.75em;
+        font-weight: 400; }
+      .wrapper .btn.btn-warning.btn-mini {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.625em;
+        font-weight: 400; }
+    .wrapper .btn.btn-danger {
+      background: #df4425;
+      border: 1px solid #a02e17;
+      color: white;
+      text-decoration: none;
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: 400; }
+      .wrapper .btn.btn-danger:hover, .wrapper .btn.btn-danger:focus {
+        box-shadow: 0 3px 6px #a02e17;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+        background: #cc3b1e; }
+      .wrapper .btn.btn-danger.btn-large {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 1.125em;
+        font-weight: 400; }
+      .wrapper .btn.btn-danger.btn-small {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.75em;
+        font-weight: 400; }
+      .wrapper .btn.btn-danger.btn-mini {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.625em;
+        font-weight: 400; }
+    .wrapper .btn.btn-inverse {
+      background: #231f20;
+      border: 1px solid black;
+      color: white;
+      text-decoration: none;
+      font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 0.875em;
+      font-weight: 400; }
+      .wrapper .btn.btn-inverse:hover, .wrapper .btn.btn-inverse:focus {
+        box-shadow: 0 3px 6px black;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2) inset;
+        background: #151314; }
+      .wrapper .btn.btn-inverse.btn-large {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 1.125em;
+        font-weight: 400; }
+      .wrapper .btn.btn-inverse.btn-small {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.75em;
+        font-weight: 400; }
+      .wrapper .btn.btn-inverse.btn-mini {
+        font-family: "Open Sans", "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 0.625em;
+        font-weight: 400; }
+  .wrapper a {
+    color: #42424a;
+    text-decoration: none;
+    font-weight: 700; }
+    .wrapper a:hover, .wrapper a:focus {
+      color: #060607; }
 
 .content {
   position: relative;
@@ -54,7 +231,8 @@ body {
   .navbar .navbar-inner {
     background: #42424a;
     border: none;
-    height: 44px; }
+    height: 44px;
+    box-shadow: none; }
   .navbar .nav {
     margin: 0 -15px; }
     .navbar .nav.pull-left {
@@ -78,55 +256,70 @@ body {
         position: relative; }
       .navbar .nav > li > a {
         padding: 10px 0;
-        height: 20px; }
+        height: 20px;
+        font-weight: 400; }
         .navbar .nav > li > a:hover, .navbar .nav > li > a:focus {
           background-color: #42424a; }
 
 .header {
   padding: 59px 15px 15px;
   height: 75px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #d1d2d4;
   background: #fff; }
-
-.search-block {
-  padding: 8px;
-  border: 1px solid #eee;
-  border-radius: 3px;
-  float: left;
-  margin-left: 10px; }
-  .search-block .dropdown-menu {
-    width: 257px;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px; }
-    .search-block .dropdown-menu > li > a {
-      padding: 3px 12px; }
+  .header:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.25em; }
 
 .logo {
-  float: left;
-  margin-top: 15px; }
+  display: inline-block;
+  vertical-align: middle;
+  position: relative; }
   .logo img {
-    max-width: 200px; }
+    max-width: 225px;
+    max-height: 65px; }
 
-.search-options {
-  float: right;
-  margin-left: 20px; }
-
-.search-submit-btn {
-  margin-bottom: 7px;
-  width: 149px;
-  padding: 14px 0; }
+.search-wrapper {
+  right: 15px;
+  position: absolute;
+  top: 56px; }
 
 .search-block-wrapper {
-  right: 190px;
-  position: absolute; }
+  display: inline-block; }
+  .search-block-wrapper .search-block {
+    padding: 8px;
+    border: 1px solid #eee;
+    border-radius: 3px;
+    float: left;
+    margin-left: 10px; }
+    .search-block-wrapper .search-block .dropdown-menu {
+      width: 257px;
+      -moz-border-radius: 3px;
+      -webkit-border-radius: 3px;
+      border-radius: 3px; }
+      .search-block-wrapper .search-block .dropdown-menu > li > a {
+        padding: 3px 12px; }
+
+.search-options {
+  display: inline-block;
+  margin-left: 15px;
+  top: -18px;
+  position: relative; }
+  .search-options #perform-search {
+    margin-bottom: 6px;
+    padding: 8px 0; }
 
 .subhead {
   padding: 10px 15px;
-  border-bottom: 1px solid #c2c2c2;
+  border-bottom: 1px solid #d1d2d4;
   font-size: 1em;
   background: #fff;
-  height: 24px; }
+  height: 24px;
+  position: relative;
+  z-index: 9;
+  box-shadow: 0 6px 0 rgba(0, 0, 0, 0.15); }
   .subhead span {
     font-weight: bold; }
   .subhead .exportBtn {
@@ -156,12 +349,14 @@ body {
     top: 230px;
     right: 6px; } }
 footer {
+  border-top: 1px solid #d1d2d4;
   position: relative;
   background: #FFF;
   width: 100%;
-  font-size: 12px;
-  height: 20px;
-  padding: 10px 15px; }
+  font-size: 12px; }
+  footer .footer-inner {
+    padding: 9px 15px 10px;
+    height: 20px; }
   footer a {
     color: #799397;
     font-weight: 700; }
@@ -171,7 +366,7 @@ footer {
 
 #map {
   left: 0;
-  background: #eee;
+  background: #d1d2d4;
   position: absolute;
   bottom: 40px;
   top: 0;
@@ -179,28 +374,27 @@ footer {
 
 .sidebar {
   width: 350px;
-  background: #fff;
-  border-left: 1px solid #c2c2c2;
+  background: #FFF;
+  border-left: 1px solid #d1d2d4;
   position: absolute;
   top: 0;
   right: 0;
   bottom: 40px; }
   .sidebar .accordion-group {
-    border-left: none;
-    border-right: none;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    border-radius: 0px;
-    margin-bottom: 0px;
-    border-top: none; }
+    border-radius: 0;
+    margin-bottom: 0;
+    border: none;
+    border-top: 1px solid #d1d2d4; }
   .sidebar .accordion-heading {
-    background: #eee; }
+    background: #56abb2; }
     .sidebar .accordion-heading a {
-      color: #000;
-      font-weight: bold; }
+      color: #f1f1f2;
+      font-size: 1em;
+      font-weight: 700;
+      padding: 15px; }
       .sidebar .accordion-heading a:hover {
         text-decoration: none;
-        color: #000; }
+        color: #FFF; }
 
 .benefit-label {
   font-weight: 700; }
@@ -210,7 +404,7 @@ span.tt-dropdown-menu {
   padding: 10px;
   width: 199px;
   font-size: 0.8125em !important;
-  border: 1px solid #c2c2c2;
+  border: 1px solid #d1d2d4;
   background: #fff;
   border-radius: 3px;
   box-shadow: 0px 0px 5px rgba(0, 3, 0, 0.3); }
@@ -218,7 +412,7 @@ span.tt-dropdown-menu {
 .tt-suggestion p {
   padding: 0px 7px; }
   .tt-suggestion p:hover {
-    background-color: #eee;
+    background-color: #d1d2d4;
     border-radius: 3px; }
 
 .create_instance_map {
