--- a/opentreemap/treemap/static/css/sass/modules/_links.scss
+++ b/opentreemap/treemap/static/css/sass/modules/_links.scss
@@ -1,8 +1,16 @@
-@mixin links($color: $navbar-color) {
-    color: $color;
+@mixin links {
+	a {
+		@include link($navbar-color);
+	}
+}
+
+@mixin link($color: $navbar-color) {
+	color: $color;
     text-decoration: none;
     font-weight: 700;
-    &:hover {
+
+    &:hover,
+    &:focus {
         color: darken($color, 25%);
     }
 }
