--- a/opentreemap/treemap/static/css/sass/partials/_navbar.scss
+++ b/opentreemap/treemap/static/css/sass/partials/_navbar.scss
@@ -7,6 +7,7 @@
         background: $navbar-color;
         border: none;
         height: 44px;
+        box-shadow: none;
     }
 
     .nav {
@@ -43,6 +44,7 @@
             > a {
                 padding: 10px 0;
                 height: 20px;
+                font-weight: 400;
 
                 &:hover,
                 &:focus {
