Add advanced search area and connect to advanced search button

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -62,6 +62,8 @@
           {% endblock search %}
           {% block searchoptions %}
           {% endblock searchoptions %}
+          {% block advancedsearch %}
+          {% endblock advancedsearch %}
         </div>
 
       </div> <!-- end header -->
