Concatenate vendor css

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8" />
 
-    <link href="{{ STATIC_URL }}css/vendor/openlayers.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/vendor/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/vendor/fontello.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/vendor.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
