Allow moving plot on map page (in "edit tree details" mode)
* "Edit tree details" mode gets buttons "Move Tree" and "Cancel Tree Move"
* Return plot location in plot_accordion.html via data attributes on form element
* Moving the plot handled by plotMover.js
* All modes share an instance of plotMarker
* Show/hide marker when user selects/deselects a tree
* Pass mapManager to modes, simplifying map update after add/move tree
* Show marker differently when it's being moved (will be more beautiful in the future)

--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -13,6 +13,10 @@
              span.plot-label + br + span.content + p ...
         -->
       </div>
+      <div id="move-plot-buttons">
+        <a href="javascript:;" class="btn" style="display:none" id="edit-plot-location">Move Tree</a>
+        <a href="javascript:;" class="btn" style="display:none" id="cancel-edit-plot-location">Cancel Tree Move</a>
+      </div>
     </div>
   </div>
   <div class="accordion-group">
