--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8" />
 
+    {% if settings.TEMPLATE_DEBUG %}
     <link href="{{ STATIC_URL }}css/vendor.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet">
+    {% else %}
+    <link href="{{ STATIC_URL }}css/vendor.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/main.min.css" rel="stylesheet">
+    {% endif %}
 
     <!--[if lt IE 9]>
       <script src="{{ STATIC_URL }}js/html5shiv.js"></script>
