Support editing 'choice' udfs. Fixes #285.

--- a/opentreemap/treemap/templates/treemap/plot_field.html
+++ b/opentreemap/treemap/templates/treemap/plot_field.html
@@ -13,8 +13,7 @@
           style="display: none;">
       {% if field.data_type == 'choice' %}
         <select name="{{ field.identifier }}"
-                value="{{ field.value|default_if_none:"" }}"
-                style="display: none;" />
+                value="{{ field.value|default_if_none:"" }}">
             {% for option in field.options %}
                 <option value="{{ option }}">
                     {{option}}
