Show error on duplicate registration. Fixes #150.
Looks like django registration prefers to POST rather than GET

--- a/opentreemap/treemap/templates/registration/registration_form.html
+++ b/opentreemap/treemap/templates/registration/registration_form.html
@@ -16,7 +16,7 @@
 
 <div class="content login-signup">
   <div class="well login-signup-panel">
-    <form>
+    <form method="POST">
       <fieldset>
         <!-- TODO: This photo field needs to be added to a subclassed form -->
         <!--
