--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -1,7 +1,7 @@
 <div class="accordion" id="map-info">
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#tree-details">Tree Details <span class="arrow pull-right"><i class="icon-right"></i></span></a>
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#tree-detail">Tree Details <span class="arrow pull-right"><i class="icon-right"></i></span></a>
     </div>
     <div id="tree-detail" class="accordion-body collapse">
       <a href="javascript:;" class="btn" id="full-details-button">Full Details</a>
