--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -1,27 +1,35 @@
 <!-- Note: rough and without translation tags until we have prototype markup -->
 {% load form_extras %}
+{% load i18n %}
 
-<h3>Add a Tree</h3>
-<h4>1. Set the tree’s location</h4>
-<div>Click the map and then drag the marker to the correct location.</div>
-<h4>2. Additional information</h4>
+<h3>{% trans "Add a Tree" %}</h3>
+
+<h4>1. {% trans "Set the tree’s location" %}</h4>
+<div>{% trans "Start with an address, your current location, or a map click. Then drag the marker to the correct location." %}</div>
+<input type="text" id="add-tree-address" placeholder="{% trans "340 N 12th St, Philadelphia" %}">
+<a href="javascript:;" class="btn geocode">{% trans "Search" %}</a>
+<div class="text-error geocode-error" style="display: none;">{% trans "Unable to locate address in this region" %}</div>
+<br>
+<a href="javascript:;" class="btn geolocate">Use current location</a>
+<div class="text-error geolocate-error" style="display: none;">{% trans "Unable to determine current location" %}</div>
+
+<h4>2. {% trans "Additional information" %}</h4>
 <form id="add-tree-form">
     {% for label, identifier in fields_for_add_tree %}
         {% field label from identifier withtemplate "treemap/field.html" %}
     {% endfor %}
     </form>
 
-<h4>3. After I add this tree...</h4>
+<h4>3. {% trans "After I add this tree..." %}</h4>
 <div style="color: #aaa">
-    <input type="radio" disabled="disabled">I want to add another tree using the same tree details<br/>
-    <input type="radio" disabled="disabled">I want to add another tree with new details<br/>
-    <input type="radio" disabled="disabled">Let me continue editing this tree<br/>
+    <input type="radio" disabled="disabled">{% trans "I want to add another tree using the same tree details" %}<br/>
+    <input type="radio" disabled="disabled">{% trans "I want to add another tree with new details" %}<br/>
+    <input type="radio" disabled="disabled">{% trans "Let me continue editing this tree" %}<br/>
 </div>
-<input type="radio" checked="true">I'm done!<br/>
-
+<input type="radio" checked="true">{% trans "I'm done!" %}<br/>
 
 <div>
     &nbsp;<br/>
-    <a href="javascript:;" class="btn saveBtn">Add This Tree</a>
-    <a href="javascript:;" class="btn cancelBtn">Cancel</a>
+    <a href="javascript:;" class="btn saveBtn">{% trans "Add This Tree" %}</a>
+    <a href="javascript:;" class="btn cancelBtn">{% trans "Cancel" %}</a>
 </div>
