Remove _responsive.scss (unneeded), refine page styling for non-map pages and use bootstrap consistently

--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -7,7 +7,7 @@ $base-font-size			: 16px;
 $primary-color			: #8baa3d; // OTM Green color
 $secondary-color		: #56abb2; // OTM Teal color 
 $success-color			: #add142; // OTM Lime Green color
-$warning-color			: #ffdd17; // Warning color
+$warning-color			: #e0c122; // Warning color
 $alert-color			: #df4425; // OTM Red color
 
 $navbar-color			: #42424a; // Navbar gray color
