--- a/opentreemap/treemap/css/sass/partials/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/_registration.scss
@@ -1,41 +1,41 @@
 // Partial: Registration Pages
 
-.login-signup {
-  background: #f8f8f8;
-}
-
 .login-signup-panel {
-  background-color: #fff;
-  box-shadow: none;
-  width: 940px;
-  margin: 0px auto;
+    background-color: #fff;
+    box-shadow: none;
+    width: 540px;
+    margin: 30px auto 15px;
 }
 
 .have-account {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 .signup-option {
-  text-align: center;
-  vertical-align: middle;
-  border: none;
-  background-color: #777;
-  color: #fff;
-  margin-top: 15px;
-}
+    text-align: center;
+    vertical-align: middle;
+    border: none;
+    background-color: $navbar-color;
+    color: #fff;
+    margin-top: 15px;
 
-.signup-option p {
-  margin-bottom: 0;
-}
-
-.signup-option a {
-  margin-left: 20px;
+    p {
+        margin-bottom: 0;
+    }
+    a {
+        margin-left: 20px;
+    }
 }
 
 .profile-photo-upload {
-  padding: 5px;
-  border: 1px solid #eee;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+    padding: 5px;
+    border: 1px solid #eee;
+    border-radius: 3px;
+}
+
+@media (max-width: 767px) {
+    .login-signup-panel {
+        width: auto;
+        margin: 30px 20px 15px;
+    }
 }
