Support address search in "Add Tree" mode
* Move more cleanup logic into geocodeUi.js
* Use Bacon for geolocation
* Use more Bacon in addTreeMode.js to help with state cleanup

--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -30,6 +30,6 @@
 
 <div>
     &nbsp;<br/>
-    <a href="javascript:;" class="btn saveBtn">{% trans "Add This Tree" %}</a>
+    <a href="javascript:;" class="btn addBtn">{% trans "Add This Tree" %}</a>
     <a href="javascript:;" class="btn cancelBtn">{% trans "Cancel" %}</a>
 </div>
