--- a/opentreemap/treemap/templates/treemap/plot_accordion.html
+++ b/opentreemap/treemap/templates/treemap/plot_accordion.html
@@ -5,14 +5,14 @@
 <form id="details-form" data-location-x="{{ plot.geom.x }}" data-location-y="{{ plot.geom.y }}">
 
     {% if tree %}
-    {# The "tree-species" label is used as an id prefix in "field_species.html" #}
-    {% field "tree-species" from "tree.species" for request.user withtemplate "treemap/field_species.html" %}
-
-    {% trans "Tree Height" as height %}
-    {% field height from "tree.height" for request.user withtemplate "treemap/field.html" %}
+    {# The "edit-tree-species" label is used as an id prefix in "field_species.html" #}
+    {% field "edit-tree-species" from "tree.species" for request.user withtemplate "treemap/field_species.html" %}
 
     {% trans "Trunk Diameter" as diameter %}
     {% field diameter from "tree.diameter" for request.user withtemplate "treemap/field.html" %}
+
+    {% trans "Tree Height" as height %}
+    {% field height from "tree.height" for request.user withtemplate "treemap/field.html" %}
     {% endif %}
 
     {% trans "Nearby Address" as addr %}
