--- a/opentreemap/treemap/templates/treemap/map-add-tree.html
+++ b/opentreemap/treemap/templates/treemap/map-add-tree.html
@@ -5,7 +5,7 @@
 <h3>{% trans "Add a Tree" %}</h3>
 
 <h4>1. {% trans "Set the tree’s location" %}</h4>
-<div>{% trans "Start with an address, your current location, or a map click. Then drag the marker to the correct location." %}</div>
+<div>{% trans "Search by address or use your current location, then drag the marker to the correct location. Or click the map." %}</div>
 <input type="text" id="add-tree-address" placeholder="{% trans "340 N 12th St, Philadelphia" %}">
 <a href="javascript:;" class="btn geocode">{% trans "Search" %}</a>
 <div class="text-error geocode-error" style="display: none;">{% trans "Unable to locate address in this region" %}</div>
