Support /map/#addtree URL, and wire up "Add Tree" controls

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -5,7 +5,7 @@
 
 {% block instancetopnav %}
 <li><a href="{% url 'map' instance_url_name=request.instance.url_name %}">{% trans "Explore Trees" %}</a></li>
-<li><a href="javascript:;">{% trans "Add a Tree" %}</a></li>
+<li><a href="{% url 'map' instance_url_name=request.instance.url_name %}#addtree">{% trans "Add a Tree" %}</a></li>
 {% endblock instancetopnav %}
 
 {% block subhead %}
